Fix some problems on mobile browsers

--- a/view/default/image/login.css
+++ b/view/default/image/login.css
@@ -2,7 +2,6 @@
 .login_form{
 	border-radius:8px;
 	box-shadow:rgb(116, 116, 116) 0px 0px 8px 0px;
-	width:470px;
 	margin:40px auto;
 	background:white;
 	text-align:center;
